add a nonlinear and an univariate sensitizes algorithm implemented with shap, xgboost, and mutual regression models and modify brain.conf and controller/sensi.py files accordingly to enable the configuration of the sensitize algorithm

--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -36,3 +36,16 @@ MAX_SEARCH_SPACE = 1000
 SURROGATE = RBFInterpolant 
 # HORD strategy: DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
 STRATEGY  = DYCORSStrategy 
+
+
+[sensi]
+# supporting four methods: univariate, shap
+explainer = shap
+# number of trials for sensitize analysis
+trials = 0
+# number of epochs for training xgboost
+epoch = 5
+# top N parameters recommended
+topN = 10
+# confidence threshold for accumulated sensitivity scores
+threshold = 0.9
