--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -39,7 +39,7 @@ STRATEGY  = DYCORSStrategy
 
 
 [sensi]
-# supporting four methods: univariate, shap
+# supporting four methods: lasso, univariate, shap
 explainer = shap
 # number of trials for sensitize analysis
 trials = 0
