--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -1,49 +1,21 @@
-[home]
-# KeenTune install path
-KeenTune_HOME = /etc/keentune/
-
-# KeenTune workspace
-KeenTune_WORKSPACE = /var/keentune/
-
 [brain]
-# brain algorithm port
-ALGO_PORT = 9872
+KeenTune_HOME = /etc/keentune/
+KeenTune_WORKSPACE = /var/keentune/
+BRAIN_PORT = 9872
+
+[tune]
+MAX_SEARCH_SPACE = 1000
+SURROGATE = RBFInterpolant
+STRATEGY  = DYCORSStrategy
+
+[sensitize]
+EPOCH = 5
+TOPN = 10
+THRESHOLD = 0.9
 
 [log]
-# Logging level of terminal output
-CONSOLE_LEVEL = ERROR
-
-# The log level of log file output
-LOGFILE_LEVEL = DEBUG
-
-# Log File Name
 LOGFILE_PATH  = /var/log/keentune/brain.log
-
-# The time interval of the log file
+CONSOLE_LEVEL = INFO
+LOGFILE_LEVEL = DEBUG
 LOGFILE_INTERVAL = 1
-
-# Number of log files saved
 LOGFILE_BACKUP_COUNT = 14
-
-[algorithm]
-# Max search space size for a parameter
-MAX_SEARCH_SPACE = 1000
-
-[hord]
-# HORD surrogate: RBFInterpolant, PolyRegressor, GPRegressor
-SURROGATE = RBFInterpolant 
-# HORD strategy: DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
-STRATEGY  = DYCORSStrategy 
-
-
-[sensi]
-# supporting four methods: gp, lasso, univariate, shap
-explainer = shap
-# number of trials for sensitize analysis
-trials = 0
-# number of epochs for training xgboost
-epoch = 5
-# top N parameters recommended
-topN = 10
-# confidence threshold for accumulated sensitivity scores
-threshold = 0.9
