--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-hyperopt==0.2.5
-tornado
-POAP
-numpy
-pySOT
-scikit_learn
-xgboost
-shap
+hyperopt==0.1.2
+numpy==1.19.5
+POAP==0.1.26
+pySOT==0.3.3
+requests==2.26.0
+scikit_learn==1.1.1
+setuptools==39.2.0
+shap==0.40.0
+tornado==6.1
+xgboost==1.5.2
