add comments in brain.conf
Signed-off-by: runzhe.wrz <runzhe.wrz@alibaba-inc.com>

--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -1,21 +1,25 @@
 [brain]
-KeenTune_HOME = /etc/keentune/
-KeenTune_WORKSPACE = /var/keentune/
-BRAIN_PORT = 9872
+# Basic Configuration
+KeenTune_HOME       = /etc/keentune/    ; KeenTune-brain install path.
+KeenTune_WORKSPACE  = /var/keentune/    ; KeenTune-brain workspace.
+BRAIN_PORT          = 9872              ; KeenTune-brain service port
 
-[tune]
-MAX_SEARCH_SPACE = 1000
-SURROGATE = RBFInterpolant
-STRATEGY  = DYCORSStrategy
+[tuning]
+# Auto-tuning Algorithm Configuration.
+MAX_SEARCH_SPACE    = 1000              ; Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
+SURROGATE           = RBFInterpolant    ; Surrogate in tuning algorithm - HORD 
+STRATEGY            = DYCORSStrategy    ; Strategy in tuning algorithm - HORD 
 
 [sensitize]
-EPOCH = 5
-TOPN = 10
-THRESHOLD = 0.9
+# Sensitization Algorithm Configuration.
+EPOCH       = 5         ; Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
+TOPN        = 10        ; The top number to select sensitive knobs.
+THRESHOLD   = 0.9       ; The sensitivity threshold to select sensitive knobs.
 
 [log]
-LOGFILE_PATH  = /var/log/keentune/brain.log
-CONSOLE_LEVEL = INFO
-LOGFILE_LEVEL = DEBUG
-LOGFILE_INTERVAL = 1
-LOGFILE_BACKUP_COUNT = 14
+# Configuration about log
+LOGFILE_PATH        = /var/log/keentune/brain.log   ; Log file of brain
+CONSOLE_LEVEL       = INFO                          ; Console Log level
+LOGFILE_LEVEL       = DEBUG                         ; File saved log level
+LOGFILE_INTERVAL    = 1                             ; The interval of log file replacing
+LOGFILE_BACKUP_COUNT= 14                            ; The count of backup log file  
