add available surrogate and strategy in brain.conf
Signed-off-by: runzhe.wrz <runzhe.wrz@alibaba-inc.com>

--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -7,8 +7,8 @@ BRAIN_PORT          = 9872              ; KeenTune-brain service port
 [tuning]
 # Auto-tuning Algorithm Configuration.
 MAX_SEARCH_SPACE    = 1000              ; Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
-SURROGATE           = RBFInterpolant    ; Surrogate in tuning algorithm - HORD 
-STRATEGY            = DYCORSStrategy    ; Strategy in tuning algorithm - HORD 
+SURROGATE           = RBFInterpolant    ; Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor.
+STRATEGY            = DYCORSStrategy    ; Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy.
 
 [sensitize]
 # Sensitization Algorithm Configuration.
