fix: wrong comment format in .conf file
Signed-off-by: runzhe.wrz <runzhe.wrz@alibaba-inc.com>

--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -1,25 +1,39 @@
 [brain]
-# Basic Configuration
-KeenTune_HOME       = /etc/keentune/    ; KeenTune-brain install path.
-KeenTune_WORKSPACE  = /var/keentune/    ; KeenTune-brain workspace.
-BRAIN_PORT          = 9872              ; KeenTune-brain service port
+#* Basic Configuration *#
+# KeenTune-brain install path.
+KeenTune_HOME       = /etc/keentune/
+# KeenTune-brain workspace.
+KeenTune_WORKSPACE  = /var/keentune/
+# KeenTune-brain service port
+BRAIN_PORT          = 9872
 
 [tuning]
-# Auto-tuning Algorithm Configuration.
-MAX_SEARCH_SPACE    = 1000              ; Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
-SURROGATE           = RBFInterpolant    ; Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor.
-STRATEGY            = DYCORSStrategy    ; Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy.
+#* Auto-tuning Algorithm Configuration. *#
+# Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
+MAX_SEARCH_SPACE    = 1000
+# Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor.
+SURROGATE           = RBFInterpolant
+# Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy.
+STRATEGY            = DYCORSStrategy
 
 [sensitize]
-# Sensitization Algorithm Configuration.
-EPOCH       = 5         ; Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
-TOPN        = 10        ; The top number to select sensitive knobs.
-THRESHOLD   = 0.9       ; The sensitivity threshold to select sensitive knobs.
+#* Sensitization Algorithm Configuration. *#
+# Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
+EPOCH       = 5
+# The top number to select sensitive knobs.
+TOPN        = 10
+# The sensitivity threshold to select sensitive knobs.
+THRESHOLD   = 0.9
 
 [log]
-# Configuration about log
-LOGFILE_PATH        = /var/log/keentune/brain.log   ; Log file of brain
-CONSOLE_LEVEL       = INFO                          ; Console Log level
-LOGFILE_LEVEL       = DEBUG                         ; File saved log level
-LOGFILE_INTERVAL    = 1                             ; The interval of log file replacing
-LOGFILE_BACKUP_COUNT= 14                            ; The count of backup log file  
+#* Configuration about log *#
+# Log file of brain
+LOGFILE_PATH        = /var/log/keentune/brain.log
+# Console Log level
+CONSOLE_LEVEL       = INFO
+# File saved log level
+LOGFILE_LEVEL       = DEBUG
+# The interval of log file replacing
+LOGFILE_INTERVAL    = 1
+# The count of backup log file
+LOGFILE_BACKUP_COUNT= 14                            
