--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -1,51 +1,39 @@
-[home]
-# KeenTune install path
-KeenTune_HOME = /etc/keentune/
-
-# KeenTune workspace
-KeenTune_WORKSPACE = /var/keentune/
-
 [brain]
-# brain algorithm port
-ALGO_PORT = 9872
-# brain sensitive port
-GRAPH_PORT = 9000
+#* Basic Configuration *#
+# KeenTune-brain install path.
+KeenTune_HOME       = /etc/keentune/
+# KeenTune-brain workspace.
+KeenTune_WORKSPACE  = /var/keentune/
+# KeenTune-brain service port
+BRAIN_PORT          = 9872
+
+[tuning]
+#* Auto-tuning Algorithm Configuration. *#
+# Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
+MAX_SEARCH_SPACE    = 1000
+# Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor.
+SURROGATE           = RBFInterpolant
+# Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy.
+STRATEGY            = DYCORSStrategy
+
+[sensitize]
+#* Sensitization Algorithm Configuration. *#
+# Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
+EPOCH       = 5
+# The top number to select sensitive knobs.
+TOPN        = 10
+# The sensitivity threshold to select sensitive knobs.
+THRESHOLD   = 0.9
 
 [log]
-# Logging level of terminal output
-CONSOLE_LEVEL = ERROR
-
-# The log level of log file output
-LOGFILE_LEVEL = DEBUG
-
-# Log File Name
-LOGFILE_PATH  = /var/log/keentune/brain.log
-
-# The time interval of the log file
-LOGFILE_INTERVAL = 1
-
-# Number of log files saved
-LOGFILE_BACKUP_COUNT = 14
-
-[algorithm]
-# Max search space size for a parameter
-MAX_SEARCH_SPACE = 1000
-
-[hord]
-# HORD surrogate: RBFInterpolant, PolyRegressor, GPRegressor
-SURROGATE = RBFInterpolant 
-# HORD strategy: DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
-STRATEGY  = DYCORSStrategy 
-
-
-[sensi]
-# supporting four methods: gp, lasso, univariate, shap
-explainer = shap
-# number of trials for sensitize analysis
-trials = 0
-# number of epochs for training xgboost
-epoch = 5
-# top N parameters recommended
-topN = 10
-# confidence threshold for accumulated sensitivity scores
-threshold = 0.9
+#* Configuration about log *#
+# Log file of brain
+LOGFILE_PATH        = /var/log/keentune/brain.log
+# Console Log level
+CONSOLE_LEVEL       = INFO
+# File saved log level
+LOGFILE_LEVEL       = DEBUG
+# The interval of log file replacing
+LOGFILE_INTERVAL    = 1
+# The count of backup log file
+LOGFILE_BACKUP_COUNT= 14                            
