docs: modify format of brain.conf
Signed-off-by: runzhe.wrz <runzhe.wrz@alibaba-inc.com>

--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -1,5 +1,5 @@
 [brain]
-#* Basic Configuration *#
+# Basic Configuration
 # KeenTune-brain install path.
 KeenTune_HOME       = /etc/keentune/
 # KeenTune-brain workspace.
@@ -8,7 +8,7 @@ KeenTune_WORKSPACE  = /var/keentune/
 BRAIN_PORT          = 9872
 
 [tuning]
-#* Auto-tuning Algorithm Configuration. *#
+# Auto-tuning Algorithm Configuration.
 # Limitation of the Max-number of available value of a single knob to avoid dimension explosion.
 MAX_SEARCH_SPACE    = 1000
 # Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor.
@@ -17,7 +17,7 @@ SURROGATE           = RBFInterpolant
 STRATEGY            = DYCORSStrategy
 
 [sensitize]
-#* Sensitization Algorithm Configuration. *#
+# Sensitization Algorithm Configuration.
 # Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
 EPOCH       = 5
 # The top number to select sensitive knobs.
@@ -26,7 +26,7 @@ TOPN        = 10
 THRESHOLD   = 0.9
 
 [log]
-#* Configuration about log *#
+# Configuration about log
 # Log file of brain
 LOGFILE_PATH        = /var/log/keentune/brain.log
 # Console Log level
