--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-hyperopt==0.2.5
-numpy
-POAP
-pySOT
-requests
-scikit_learn
-setuptools
-shap
-tornado
-xgboost
+numpy==1.19.5
+requests==2.27.1
+scikit_learn==1.1.2
+setuptools==39.2.0
+tornado==6.1
