--- a/brain/brain.conf
+++ b/brain/brain.conf
@@ -15,6 +15,10 @@ MAX_SEARCH_SPACE    = 1000
 SURROGATE           = RBFInterpolant
 # Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy.
 STRATEGY            = DYCORSStrategy
+# Timeout setting of acquire and feedback, defalut 30 second
+ACQUIRE_TIMEOUT     = 30
+FEEDBACK_TIMEOUT    = 30
+
 
 [sensitize]
 # Sensitization Algorithm Configuration.
